bug: "processing" indicator sometimes not visible on mobile

--- a/assets/themes/bootstrap/resources/bootstrap/css/style.css
+++ b/assets/themes/bootstrap/resources/bootstrap/css/style.css
@@ -274,18 +274,12 @@ border-top: 1px solid #eee;
     hyphens: auto;
   }
   span.loader{
-    position: fixed;
-    display: block;
-    height: 100%;
-    z-index: 1;
-    width: 100%;
-    top: 0;
-    left: 0;
+    height: 60px;
   }
   span.loaderFiller{
-    display: block;
-    width: 100%;
-    height: 40%;
+    display: none;
+  }
+
   }
 }
 /* @media (min-width: 350px) and (max-width: 380px) {
